# edu_ml

./: .gitignore  .gitmodules  README.md
clang-ml/: analyze_flags.py  flags-gen.py  get-data.py  reduce-data.py
clang-ml/analysis/: flag_effects.csv  flag_effects.md
clang-ml/dataset-bench/c-algorithms/: arraylist_bench.c  avl_bench.c  binary_heap_bench.c  hash_table_bench.c  list_bench.c  queue_bench.c  rb_tree_bench.c  trie_bench.c
clang-ml/dataset-bench/cJSON/: array_bench.c  mixed_bench.c  parse_bench.c  print_bench.c  traverse_bench.c
clang-ml/dataset-bench/coreutils/: cat_bench.py  echo_bench.py  head_bench.py  large.txt  md5sum_bench.py  small.txt  sort_bench.py
clang-ml/dataset-bench/curl/: data_url_bench.py  file_header_bench.py  file_read_bench.py  help_bench.py  resolve_fake_bench.py  test.txt
clang-ml/dataset-bench/glib/: hash_table_test.c  list_test.c  queue_test.c  string_test.c  tree_test.c
clang-ml/dataset-bench/libgcrypt/: aes256_decrypt_bench.c  aes256_encrypt_bench.c  pbkdf2_derive_bench.c  rsa_sign_bench.c  rsa_verify_bench.c  sha512_hash_bench.c
clang-ml/dataset-bench/libsodium/: aead_chacha20_bench.c  argon2id_derive_bench.c  blake2b_hash_bench.c  crypto_box_bench.c  (+2 more)
clang-ml/docs/: report.tex
task_1/: CMakeLists.txt  README.md  Task_1_Huffman.ipynb  huffman.c  huffman.h  main.py  pyhuffman.c
task_1/tests/: 2  3  4  5  6  7
task_2/: README.md  Task_2_Linear_Regression.ipynb  main.py  requirements.txt
task_3/: README.md  Task_3_SVM.ipynb  main.py  requirements.txt
task_4/: README.md  Task_4_K_Means.ipynb  main.py
(+53 files in other folders)
